fixed z-index on dropdown

--- a/station-ui/src/components/inputs/dropdown/Dropdown.module.scss
+++ b/station-ui/src/components/inputs/dropdown/Dropdown.module.scss
@@ -50,7 +50,7 @@
   background-color: var(--token-dark-500);
   border: 1px solid var(--token-dark-700);
   border-radius: 8px;
-  z-index: 10;
+  z-index: 102;
   max-height: 200px;
   box-shadow: 0px 5px 7px 0px #0000009c;
   top: calc(56px + 4px);
